Fixed overflow bug on login page

--- a/src/Pages/Public/LoginPage.scss
+++ b/src/Pages/Public/LoginPage.scss
@@ -21,17 +21,16 @@
 
 #LoginPage {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-
-  @media (max-width: 720px) {
-    justify-content: flex-start;
-  }
 }
 
 .LoginPageContent {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: min-content;
+  margin: auto;
 
   .LoginFormWrapper {
     position: relative;
